# nodeLearning/natours/app.js
@@ -45,6 +45,7 @@ const morgan = require("morgan");
 const tourRouter = require("./routes/tourRoutes");
 const userRouter = require("./routes/userRoutes");
 const reviewRouter = require("./routes/reviewRoutes");
+const catalogTourRouter = require("./routes/catalogTourRoutes");
 
 // Middleware
 const app = express();
@@ -69,6 +70,7 @@ app.get("/api/v1/health", (req, res) => {
 app.use("/api/v1/tours", tourRouter);
 app.use("/api/v1/users/", userRouter);
 app.use("/api/v1/reviews", reviewRouter);
+app.use("/api/v1/catalog-tours", catalogTourRouter);
 
 app.all("*", (req, res) => {
   res.status(404).json({
